[project]
name = "agent-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "mypy==1.2.0",
    "pytest>=7.4.2",
    "types-protobuf>=4.24.0.20240129",
    "reboot>=0.31.0",
]
